# 1N_2023_yandex_algos-practice-3

./: .1Nole  .gitignore  README.md  pyproject.toml
checker/day_1/task_1/: _desc.rst
checker/day_1/task_10/: _desc.rst  solution.py
checker/day_1/task_2/: _desc.rst  in_3.txt  in_4.txt  in_5.txt  solution.py  solution_prefixs.py
checker/day_1/task_3/: _desc.rst
checker/day_1/task_5/: _desc.rst  in_3.txt  in_5.txt  in_6.txt  solution.py
checker/day_1/task_6/: _desc.rst  in_3.txt  solution.py  solution_ml.py
checker/day_1/task_7/: _desc.rst  out_3.txt  solution.py
checker/day_1/task_8/: _desc.rst  solution.py
checker/day_1/task_9/: _desc.rst  solution.py
checker/day_3/task_16/: _desc.rst  solution.py
checker/day_3/task_17/: _desc.rst  in_1.txt  solution.py
checker/day_3/task_18/: _desc.rst  solution.py
checker/day_3/task_19/: _desc.rst  in_3.txt  solution.py
checker/day_3/task_20/: _desc.rst  solution.py
checker/day_4/task_21/: _desc.rst  solution.py
checker/day_4/task_22/: _desc.rst  solution.py
checker/day_4/task_23/: _desc.rst  out_3.txt  solution.py
checker/day_4/task_24/: _desc.rst  solution.py
checker/day_4/task_25/: _desc.rst  in_3.txt  solution.py
checker/day_5/task_26/: _desc.rst  solution.py
checker/day_5/task_27/: _desc.rst  in_2.txt  in_3.txt  in_4.txt  out_2.txt  out_4.txt  solution.py
checker/day_5/task_28/: _desc.rst  solution.py
checker/day_5/task_29/: _desc.rst  solution.java  solution.py
docs/: HOWTO.html  Lecture-1.html  Lecture-2.html  Lecture-3.html  Lecture-4.html  Lecture-5.html  Lecture-6.html
(+54 files in other folders)
